# Athon

./: .gitignore  CHANGELOG.md  CLI_EXAMPLES.md  CLI_GUIDE.md  CLI_SUMMARY.md  COMMIT_MESSAGE.md  COMMIT_MESSAGE.txt  COMMIT_MESSAGE_SHORT.txt  CONTRIBUTING.md  DEVELOPMENT.md  FILE_STRUCTURE.md  INDEX.md  INSTALL.md  LICENSE  ORGANIZATION_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  REPRO_BUILD.md  SELF_COMPILATION_COMPLETE.md  SETUP_COMPLETE.md  UPDATE_SCRIPTS.md  YOUR_NEXT_STEPS.md  athon  athon-cli.sh  athon-completion.bash  bootstrap-purge.sh  build-vscode-extension.sh  check-install.sh  dev-update.sh  install-extension.sh  install.sh  quick-update.sh  rebuild-extension.sh  setup-material-icons.sh  test-all-examples-cli.sh  test-all-examples-verbose.sh  test-all-examples.sh  test-editor-features.at  test-self-compilation.sh  update.sh  (+2 more)
ai/: AI_POLICY.md  REVIEW_GUIDE.md  prompt-templates.md
athon-pkg/: README.md
athon-spec/: ROADMAP_SUMMARY.md  capabilities.md  memory-model.md  overview.md  roadmap.md  semantics.md  syntax.md
ci/: README.md  no_external_deps_check.sh  repro_build.sh  static_checks.sh
cli/: Cargo.toml  README.md  athon-cli.rs  build.sh
compiler/: ARCHITECTURE.md  INTEGRATION_EXAMPLE.md  IR_TYPE_CHECKER_SUMMARY.md  README.md  verify-ir-typechecker.sh
compiler/bootstrap-archived/: Cargo.toml  README.md  REFACTORING_PLAN.md  build.sh
compiler/bootstrap-archived/src/: ast.rs  codegen.rs  lexer.rs  main.rs  parser.rs
docs/: CHANGELOG.md  SECURITY.md  api-reference.md  architecture.md  bootstrap-purge.md  capability-security.md  philosophy.md  (+4 more)
(+140 files in other folders)
